plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

repositories {
    mavenCentral()
}

javafx {
    version = "17"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

test {
    useJUnitPlatform()
}

group 'be.kuleuven.dbproject'
version '1.0-SNAPSHOT'
sourceCompatibility = 1.13
mainClassName = 'be.kuleuven.dbproject.ProjectMain'

dependencies {
    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.23.Final'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
    implementation group: 'com.zsoltfabok', name: 'sqlite-dialect', version: '1.0'
    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
    // https://mvnrepository.com/artifact/org.controlsfx/controlsfx
    implementation group: 'org.controlsfx', name: 'controlsfx', version: '8.0.5'




    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

run {
  jvmArgs = [
    "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
  ]
}

jar {
    manifest {
        attributes 'Implementation-Title': project.getProperty('name'),
                'Implementation-Version': project.getProperty('version'),
                'Main-Class': project.getProperty('mainClassName')
    }
}
